More small changes; added an img to current rank